feat: PostService에 인기글 조회를 위한 findPopularPostsByType() 메서드 구현